# ChangeLog for media-sound/audacious
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/ChangeLog,v 1.188 2009/12/23 20:02:51 jer Exp $

  23 Dec 2009; Jeroen Roovers <jer@gentoo.org> audacious-2.2.ebuild:
  Marked ~hppa (bug #294508).

  17 Dec 2009; Christian Faulhammer <fauli@gentoo.org> audacious-2.2.ebuild:
  stable x86, bug 295051

  16 Dec 2009; <chainsaw@gentoo.org> -audacious-2.2_beta2.ebuild,
  audacious-2.2.ebuild:
  Marked stable on AMD64 as it addresses bug #295051 (JACK plugin build
  failure). Tested using MP3, AAC, LDS, SID & WMA files on a Lifebook S6420.

  14 Dec 2009; Tobias Klausmann <klausman@gentoo.org> audacious-2.2.ebuild:
  Re-keyworded on alpha, bug 292526

  27 Nov 2009; <chainsaw@gentoo.org> -files/1.5.1-commandline-options.patch,
  -audacious-1.5.1-r1.ebuild:
  Remove old ebuild.

  26 Nov 2009; Raúl Porcel <armin76@gentoo.org> audacious-2.1.ebuild:
  sparc stable wrt #279238

*audacious-2.2 (22 Nov 2009)

  22 Nov 2009; <chainsaw@gentoo.org> +audacious-2.2.ebuild:
  Our best release yet. The MIDI support has had much love and the
  PulseAudio plugin works a lot better too. An appropriate output plugin
  should be selected automatically.

  09 Nov 2009; <chainsaw@gentoo.org> -audacious-2.2_alpha2.ebuild,
  -audacious-2.2_beta1.ebuild:
  Remove early alpha/beta ebuilds.

*audacious-2.2_beta2 (09 Nov 2009)

  09 Nov 2009; <chainsaw@gentoo.org> +audacious-2.2_beta2.ebuild:
  Version bump, more bug fixes applied. Please continue to report your bugs
  upstream so the final 2.2 release can be our best release yet. Bug #292526
  for lost ~alpha keyword.

*audacious-2.2_beta1 (20 Oct 2009)

  20 Oct 2009; <chainsaw@gentoo.org> +audacious-2.2_beta1.ebuild:
  2.2 is now in beta and waiting for you to test it. Bugs still upstream
  please. Thank you.

  14 Oct 2009; <chainsaw@gentoo.org> -audacious-1.5.1.ebuild,
  -audacious-2.0.1.ebuild, -audacious-2.1_beta1.ebuild,