@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/audacious-2.2.ebuild,v 1.6 2009/12/23 20:02:51 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/audacious-2.2.ebuild,v 1.7 2010/01/07 14:37:15 fauli Exp $
 
 MY_P="${P/_/-}"
 S="${WORKDIR}/${MY_P}"
@@ -11,7 +11,7 @@ SRC_URI="http://distfiles.atheme.org/${MY_P}.tgz
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha amd64 ~hppa ~ppc ~ppc64 ~sparc x86 ~x86-fbsd"
+KEYWORDS="~alpha amd64 ~hppa ~ppc ~ppc64 ~sparc x86 ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux"
 IUSE="altivec chardet nls libsamplerate session sse2"
 
 RDEPEND=">=dev-libs/dbus-glib-0.60
